Polishing.
Original Pull Request: #4885